[tool.poetry]
name = "pyrenderer"
version = "0.1.0"
description = ""
authors = ["Yongqing Ye <avatar.ye@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.14"
pygfx = "^0.5.0"
pyside6 = "^6.8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
